UX fixed for single click and visibility

--- a/src/app/components/avtar/avtar.component.scss
+++ b/src/app/components/avtar/avtar.component.scss
@@ -16,4 +16,12 @@
     .avtar-center>mat-card>mat-card-actions {
         margin-bottom: 10px;
     }
+    .vertical {
+        display: flex;
+        flex-direction: column;
+        margin: 15px 0;
+    }
+    .radio-vertical {
+        margin: 5px;
+    }
 }
