--- a/src/app/components/limited-dashboard/limited-dashboard.component.scss
+++ b/src/app/components/limited-dashboard/limited-dashboard.component.scss
@@ -21,5 +21,6 @@
     .mat-card-header {
         display: flex;
         flex-direction: column !important;
+        margin: 15px 0;
     }
 }
